fix: adding email verify
