# docs/swagger.json
@@ -307,7 +307,7 @@
         },
         "/auth/register": {
             "post": {
-                "description": "Do Email Verification",
+                "description": "Generate New Account as Member",
                 "consumes": [
                     "application/json"
                 ],
@@ -317,7 +317,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "Email Verification",
+                "summary": "Register New Account",
                 "parameters": [
                     {
                         "description": "Register Payload",
@@ -325,7 +325,99 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/verification.VerificationRequestPayload"
+                            "$ref": "#/definitions/register.RegisterRequestPayload"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/web.BaseResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/web.BaseResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/web.BaseResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/send-verify": {
+            "post": {
+                "description": "Send Email Verification to user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Send Email Verification",
+                "parameters": [
+                    {
+                        "description": "Register Payload",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/verification.VerificationSendRequestPayload"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/web.BaseResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/web.BaseResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/web.BaseResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/verify": {
+            "post": {
+                "description": "Do Email Verification to user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Do Email Verification",
+                "parameters": [
+                    {
+                        "description": "Register Payload",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/verification.VerificationSendRequestPayload"
                         }
                     }
                 ],
@@ -615,7 +707,7 @@
                 }
             }
         },
-        "verification.VerificationRequestPayload": {
+        "verification.VerificationSendRequestPayload": {
             "description": "Information that should be passed when request verify",
             "type": "object",
             "required": [
